# console-basic

./: requirements.txt  setup.cfg
config-generator/: console-basic.conf
console_basic/: config.py  exception.py
console_basic/cmd/: all.py
console_basic/common/: utils.py
console_basic/db/: mysql.py
console_basic/handlers/: __init__.py  helloworld.py
console_basic/server/: __init__.py  core.py
console_basic/templates/: base.html  helloworld.html
etc/: console-basic.conf.sample
