[metadata]
name = console-basic
version = 0.0.1
summary = No Summary
description-file =
    README.md
author = tianhuan
author-email = tianhuan@bingotree.cn
home-page = http://bingotree.cn/
classifier =
    Environment :: CONSOLE
    Intended Audience :: Information Technology
    Intended Audience :: System Administrators
    License :: OSI Approved :: Apache Software License
    Operating System :: POSIX :: Linux
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7

[files]
packages =
    console-basic

[global]
setup-hooks =
    pbr.hooks.setup_hook

[egg_info]
tag_build =
tag_date = 0
tag_svn_revision = 0

[build_sphinx]
all_files = 1
build-dir = doc/build
source-dir = doc/source

[pbr]
warnerrors = True
autodoc_tree_index_modules = True

[entry_points]
console_scripts =
    console-basic-all = console_basic.cmd.all:main
